[gd_scene load_steps=2 format=2]

[ext_resource path="res://Options/Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left boder" type="Label" parent="HBoxContainer"]
margin_top = 293.0
margin_right = 144.0
margin_bottom = 307.0
size_flags_horizontal = 9
text = "                                    "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 148.0
margin_right = 876.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="top border" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 728.0
margin_bottom = 14.0

[node name="Resolution" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 728.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Resolution"]
margin_right = 362.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resolution "
align = 2
valign = 1
uppercase = true

[node name="resolution" type="OptionButton" parent="HBoxContainer/VBoxContainer/Resolution"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="Window" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 728.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Window"]
margin_right = 362.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Window"
align = 2
valign = 1
uppercase = true

[node name="window" type="OptionButton" parent="HBoxContainer/VBoxContainer/Window"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="Music_Volume" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 728.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Music_Volume"]
margin_right = 362.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Music Volume"
align = 2
valign = 1
uppercase = true

[node name="Music_Volume" type="HSlider" parent="HBoxContainer/VBoxContainer/Music_Volume"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 24.0
tick_count = 10
ticks_on_borders = true

[node name="sound_effec_volume" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 728.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/sound_effec_volume"]
margin_right = 362.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "sound effec volume"
align = 2
valign = 1
uppercase = true

[node name="sound_effec_volume" type="HSlider" parent="HBoxContainer/VBoxContainer/sound_effec_volume"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 24.0
tick_count = 10
ticks_on_borders = true

[node name="Voice_volume" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 728.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Voice_volume"]
margin_right = 362.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Voice volume"
align = 2
valign = 1
uppercase = true

[node name="Voice_volume" type="HSlider" parent="HBoxContainer/VBoxContainer/Voice_volume"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 24.0
tick_count = 10
ticks_on_borders = true

[node name="Inverted_Mouse" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 728.0
margin_bottom = 146.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Inverted_Mouse"]
margin_right = 362.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Inverted Mouse"
align = 2
valign = 1
uppercase = true

[node name="inverted_mouse" type="Button" parent="HBoxContainer/VBoxContainer/Inverted_Mouse"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Mouse_Sensitivity" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 728.0
margin_bottom = 166.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Mouse_Sensitivity"]
margin_right = 362.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Mouse Sensitivity"
align = 2
valign = 1
uppercase = true

[node name="mouse_sensitivity" type="HSlider" parent="HBoxContainer/VBoxContainer/Mouse_Sensitivity"]
margin_left = 366.0
margin_right = 728.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 10.0
value = 3.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right border" type="Label" parent="HBoxContainer"]
margin_left = 880.0
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0
size_flags_horizontal = 9
text = "                                    "

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Resolution/resolution" to="HBoxContainer/VBoxContainer" method="_on_resolution_item_selected"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Window/window" to="HBoxContainer/VBoxContainer" method="_on_window_item_selected"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Music_Volume/Music_Volume" to="HBoxContainer/VBoxContainer" method="_on_Music_Volume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/sound_effec_volume/sound_effec_volume" to="HBoxContainer/VBoxContainer" method="_on_sound_effec_volume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Voice_volume/Voice_volume" to="HBoxContainer/VBoxContainer" method="_on_Voice_volume_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Inverted_Mouse/inverted_mouse" to="HBoxContainer/VBoxContainer" method="_on_inverted_mouse_pressed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Mouse_Sensitivity/mouse_sensitivity" to="HBoxContainer/VBoxContainer" method="_on_mouse_sensitivity_value_changed"]
